--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Views/RouteRule/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Views/RouteRule/RouteRuleEditor.html
@@ -47,10 +47,10 @@
                 <vr-tab header="'Time Settings'">
                     <vr-row>
                         <vr-columns width="1/2row">
-                            <vr-datetimepicker value="scopeModel.beginEffectiveDate" type="longDateTime" label="BED" isrequired customvalidate="scopeModel.validateDates()"></vr-datetimepicker>
+                            <vr-datetimepicker value="scopeModel.beginEffectiveDate" type="longDateTime" label="BED" isrequired validateanyvalue="scopeModel.validateBED()"></vr-datetimepicker>
                         </vr-columns>
                         <vr-columns width="1/2row">
-                            <vr-datetimepicker value="scopeModel.endEffectiveDate" type="longDateTime" label="EED" customvalidate="scopeModel.validateDates()"></vr-datetimepicker>
+                            <vr-datetimepicker value="scopeModel.endEffectiveDate" type="longDateTime" label="EED" validateanyvalue="scopeModel.validateEED()"></vr-datetimepicker>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
