Editing SwapDealBuyRouteRuleManager Adding SwapDealTechnicalSettingData
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41485

--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/RouteRules/MainExtensions/Templates/FixedBuyRouteRuleExtendedSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/RouteRules/MainExtensions/Templates/FixedBuyRouteRuleExtendedSettingsTemplate.html
@@ -1,9 +1,8 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
+﻿<vr-whs-be-carrieraccount-selector on-ready="scopeModel.onCarrierAccountDirectiveReady"
+                                   normal-col-num="{{controller.normalColNum}}"
+                                   isrequired="true" getcustomers>
+</vr-whs-be-carrieraccount-selector>
 
-</body>
-</html>
+<vr-columns colnum="{{controller.normalColNum}}">
+    <vr-textbox value="scopeModel.percentage" label="Percentage" type="number" minvalue="0" maxvalue="100" isrequired="true"></vr-textbox>
+</vr-columns>
