--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Views/SwapDeal/RouteRules/SwapDealBuyRouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Views/SwapDeal/RouteRules/SwapDealBuyRouteRuleEditor.html
@@ -9,9 +9,11 @@
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
-                <!--<vr-tab header="'Style Formating'">
-                    <vr-common-styledefinition-settings on-ready="scopeModel.onSettingsDirectiveReady" normal-col-num="4"></vr-common-styledefinition-settings>
-                </vr-tab>-->
+                <vr-tab header="'Settings'">
+                    <vr-whs-deal-swapdeal-buyrouterule-settings on-ready="scopeModel.onSwapDealBuyRouteRuleSettingsDirectiveReady"
+                                                                normal-col-num="6">
+                    </vr-whs-deal-swapdeal-buyrouterule-settings>
+                </vr-tab>
             </vr-tabs>
         </vr-form>
     </vr-modalbody>
