--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/RouteRules/MainExtensions/Templates/BySaleDealBuyRouteRuleExtendedSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/RouteRules/MainExtensions/Templates/BySaleDealBuyRouteRuleExtendedSettingsTemplate.html
@@ -1,9 +1,8 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
+﻿<vr-whs-deal-dealdefinition-selector on-ready="scopeModel.onDealDefinitionSelectorReady"
+                                     selectedvalues="scopeModel.selectedDeal"
+                                     normal-col-num="6" isrequired="true" hideremoveicon>
+</vr-whs-deal-dealdefinition-selector>
 
-</body>
-</html>
+<vr-columns colnum="{{controller.normalColNum}}">
+    <vr-textbox value="scopeModel.percentage" label="Percentage" type="number" minvalue="0" maxvalue="100" isrequired="true"></vr-textbox>
+</vr-columns>
