--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/RouteRules/Templates/SwapDealBuyRouteRuleExtendedSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/RouteRules/Templates/SwapDealBuyRouteRuleExtendedSettingsTemplate.html
@@ -1,9 +1,14 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
+﻿<vr-columns colnum="{{controller.normalColNum}}">
+    <vr-select on-ready="scopeModel.onSelectorReady"
+               datasource="scopeModel.templateConfigs"
+               selectedvalues="scopeModel.selectedTemplateConfig"
+               datavaluefield="ExtensionConfigurationId"
+               datatextfield="Title"
+               isrequired="true"
+               label="Type">
+    </vr-select>
+</vr-columns>
 
-</body>
-</html>
+<vr-directivewrapper ng-if="scopeModel.selectedTemplateConfig != undefined" directive="scopeModel.selectedTemplateConfig.Editor" vr-loader="scopeModel.isLoadingDirective"
+                     on-ready="scopeModel.onDirectiveReady" customvalidate="ctrl.customvalidate" normal-col-num="{{controller.normalColNum}}" isrequired="ctrl.isrequired">
+</vr-directivewrapper>
