--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/Settings/SwapDealSettings/Templates/SwapDealTechnicalSettingsEditorTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/Settings/SwapDealSettings/Templates/SwapDealTechnicalSettingsEditorTemplate.html
@@ -1,5 +1,8 @@
-﻿<vr-columns width="1/2row">
-    <vr-common-componenttype-selector on-ready="scopeModel.onComponentTypeSelectorReady"
-                                      customlabel="Buy Route Rule Definitions" isrequired="true">
-    </vr-common-componenttype-selector>
-</vr-columns>
+﻿<vr-row>
+    <vr-columns width="1/2row">
+        <vr-common-ruledefinition-selector on-ready="scopeModel.onVRRuleDefinitionSelectorReady"
+                                           customlabel="Buy Route Rule Definitions" isrequired="true">
+        </vr-common-ruledefinition-selector>
+    </vr-columns>
+</vr-row>
+
