--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Views/SwapDeal/RouteRules/SwapDealBuyRouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Views/SwapDeal/RouteRules/SwapDealBuyRouteRuleEditor.html
@@ -9,10 +9,20 @@
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
-                <vr-tab header="'Settings'">
+                <vr-tab header="'Rule Settings'">
                     <vr-whs-deal-swapdeal-buyrouterule-settings on-ready="scopeModel.onSwapDealBuyRouteRuleSettingsDirectiveReady"
                                                                 normal-col-num="6">
                     </vr-whs-deal-swapdeal-buyrouterule-settings>
+                </vr-tab>
+                <vr-tab header="'Time Settings'">
+                    <vr-row>
+                        <vr-columns width="1/2row">
+                            <vr-datetimepicker value="scopeModel.beginEffectiveDate" type="longDateTime" label="BED" isrequired validateanyvalue="scopeModel.validateBED()"></vr-datetimepicker>
+                        </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-datetimepicker value="scopeModel.endEffectiveDate" type="longDateTime" label="EED" validateanyvalue="scopeModel.validateEED()"></vr-datetimepicker>
+                        </vr-columns>
+                    </vr-row>
                 </vr-tab>
             </vr-tabs>
         </vr-form>
