--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRMail/VRMailMessageEvaluator.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRMail/VRMailMessageEvaluator.html
@@ -1,1 +1,48 @@
-﻿
+﻿<div vr-modalcontent ng-controller="VRCommon_VRMailMessageEvaluatorController" vr-loader="scopeModel.isLoading" size="medium">
+    <vr-modalbody>
+        <vr-form name="emailEvaluatorForm">
+            <vr-tabs>
+                <vr-tab header="'Definition'">
+                    <vr-row removeline>
+                        <vr-columns width="fullrow">
+                            <vr-textbox type="text" label="To" value="scopeModel.to" isrequired="true"></vr-textbox>
+                        </vr-columns>
+                    </vr-row>
+                    <vr-row removeline>
+                        <vr-columns width="fullrow">
+                            <vr-textbox type="text" label="CC" value="scopeModel.cc"></vr-textbox>
+                        </vr-columns>
+                    </vr-row>
+                    <vr-row removeline>
+                        <vr-columns width="fullrow">
+                            <vr-textbox type="text" label="Subject" value="scopeModel.subject" isrequired="true"></vr-textbox>
+                        </vr-columns>
+                    </vr-row>
+                    <vr-row removeline>
+                        <vr-columns width="1/2row">
+                            <vr-fileupload extension="xls,xlsx" value="scopeModel.priceListSheet" label="Pricelist Sheet"> </vr-fileupload>
+                        </vr-columns>
+                    </vr-row>
+                    <vr-row removeline>
+                        <vr-columns>
+                            <a ng-href="scopeModel.fileName" ng-click="scopeModel.downloadPriceListSheet">link 3</a>
+                        </vr-columns>
+                    </vr-row>
+                    <vr-row removeline>
+                        <vr-columns width="fullrow">
+                            <vr-editor label="Body" value="scopeModel.body" isrequired="true"></vr-editor>
+                        </vr-columns>
+                    </vr-row>
+                </vr-tab>
+            </vr-tabs>
+        </vr-form>
+    </vr-modalbody>
+    <div>
+        <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
+            <div transclude-to="buttons">
+                <vr-button type="SendEmail" formname="emailEvaluatorForm" data-onclick="scopeModel.sendEmail"></vr-button>
+                <vr-button type="Close" data-onclick="scopeModel.close"></vr-button>
+            </div>
+        </vr-actionbar>
+    </div>
+</div>
