--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRTile/VRTileManagement.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRTile/VRTileManagement.html
@@ -2,7 +2,7 @@
     <vr-form name="formFilter">
         <vr-row ng-if="scopeModel.vrTiles.length > 0">
                 <vr-columns ng-repeat="vrTile in scopeModel.vrTiles" colnum="4">
-                    <vr-directivewrapper directive="vrTile.runtimeEditor" title="vrTile.name" on-ready="vrTile.onVRTileDirectiveReady"></vr-directivewrapper>
+                    <vr-directivewrapper directive="vrTile.runtimeEditor" title="vrTile.name" index="$index" on-ready="vrTile.onVRTileDirectiveReady"></vr-directivewrapper>
                 </vr-columns>
         </vr-row>
     </vr-form>
