Refactoring and implementing tiles
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41505

--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal_CustomerAccess/Elements/Analytic/Directives/Templates/AnalyticTileDefinitionSettings.html
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal_CustomerAccess/Elements/Analytic/Directives/Templates/AnalyticTileDefinitionSettings.html
@@ -1,4 +1,4 @@
-﻿
-<vr-row>
+﻿<vr-row>
+    <vr-sec-view-selector on-ready="scopeModel.onViewSelectorReady" normal-col-num="6"></vr-sec-view-selector>
     <partnerportal-customeraccess-analytictiledefinitionsettings-queries on-ready="scopeModel.onAnalyticQueriesReady"></partnerportal-customeraccess-analytictiledefinitionsettings-queries>
 </vr-row>
