--- a/CarrierPortal/Code/PartnerPortal.Invoice.Web/PartnerPortal_Invoice/Elements/InvoiceTile/Directives/Templates/InvoiceTileDefinitionSettings.html
+++ b/CarrierPortal/Code/PartnerPortal.Invoice.Web/PartnerPortal_Invoice/Elements/InvoiceTile/Directives/Templates/InvoiceTileDefinitionSettings.html
@@ -1,5 +1,8 @@
 ﻿<vr-row>
+    <vr-sec-view-selector on-ready="scopeModel.onViewSelectorReady" normal-col-num="6"></vr-sec-view-selector>
+
     <vr-common-connection-selector on-ready="scopeModel.onConnectionSelectorReady" isrequired="true" normal-col-num="6" onselectionchanged=" scopeModel.onConnectionSelectionChanged"></vr-common-connection-selector>
 
     <partnerportal-invoice-invoicetype-remoteselector on-ready="scopeModel.onInvoiceTypeSelectorReady" isrequired="true" normal-col-num="6"></partnerportal-invoice-invoicetype-remoteselector>
+
 </vr-row>
