--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal_CustomerAccess/Elements/Analytic/Directives/Templates/AnalyticTileRuntimeSettings.html
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal_CustomerAccess/Elements/Analytic/Directives/Templates/AnalyticTileRuntimeSettings.html
@@ -1,12 +1,1 @@
-﻿<div ng-style="{'width':'250px', 'height':'100px', 'margin-top':'10px', 'background': '#CD0000','color' :'#fff' }">
-    <vr-row>
-        <vr-columns width="fullrow">
-            {{scopeModel.tileTitle}}
-        </vr-columns>
-    </vr-row>
-     <vr-row ng-repeat="item in scopeModel.fields">
-        <vr-columns width="fullrow">
-            {{item.Description}}: {{item.Value}}
-        </vr-columns>
-    </vr-row>
-</div>
+﻿<vr-tile index="{{ctrl.index}}" imgpath="Images/tiles-icons/calls.png" datasource="scopeModel.fields" title="{{scopeModel.tileTitle}}" target="{{scopeModel.url}}"></vr-tile>
