--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal_CustomerAccess/Elements/LiveBalance/Directives/Templates/LiveBalanceTileDefinitionSettings.html
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal_CustomerAccess/Elements/LiveBalance/Directives/Templates/LiveBalanceTileDefinitionSettings.html
@@ -1,7 +1,10 @@
 ﻿<vr-row>
+    <vr-sec-view-selector on-ready="scopeModel.onViewSelectorReady" normal-col-num="6"></vr-sec-view-selector>
+
     <vr-common-connection-selector on-ready="scopeModel.onConnectionSelectorReady" isrequired="true" normal-col-num="6" onselectionchanged=" scopeModel.onConnectionSelectionChanged"></vr-common-connection-selector>
 
     <vr-columns width="1/2row">
         <vr-textbox isrequired="true" value="scopeModel.accountTypeId" label="Account Type"></vr-textbox>
     </vr-columns>
+
 </vr-row>
