--- a/CarrierPortal/Code/PartnerPortal.Invoice.Web/PartnerPortal_Invoice/Elements/InvoiceTile/Directives/Templates/InvoiceTileRuntimeSettings.html
+++ b/CarrierPortal/Code/PartnerPortal.Invoice.Web/PartnerPortal_Invoice/Elements/InvoiceTile/Directives/Templates/InvoiceTileRuntimeSettings.html
@@ -1,15 +1,3 @@
-﻿<div ng-style="{'width':'250px', 'height':'100px', 'margin-top':'10px', 'background': 'Blue','color' :'#fff' }">
-    <vr-row>
-        <vr-columns width="fullrow">
-            {{scopeModel.tileTitle}}
-        </vr-columns>
-    </vr-row>
-    <vr-row>
-        <vr-columns width="fullrow">
-            Amount: {{scopeModel.invoiceBalance}} {{scopeModel.invoiceCurrency}}
-        </vr-columns>
-        <vr-columns width="fullrow">
-           Date: {{scopeModel.dueDate | date:'yyyy-MM-dd'}}
-        </vr-columns>
-    </vr-row>
-</div>
+﻿<vr-tile index="{{ctrl.index}}" imgpath="Images/tiles-icons/balance.png" datasource="scopeModel.fields" title="{{scopeModel.tileTitle}}" target="{{scopeModel.url}}"></vr-tile>
+
+
