--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRMail/VRMailMessageEvaluator.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRMail/VRMailMessageEvaluator.html
@@ -24,8 +24,8 @@
                         </vr-columns>
                     </vr-row>
                     <vr-row removeline>
-                        <vr-columns>
-                            <a ng-href="scopeModel.fileName" ng-click="scopeModel.downloadPriceListSheet">link 3</a>
+                        <vr-columns width="fullrow" >
+                            <a href="" ng-click="scopeModel.downloadPriceList()">{{scopeModel.fileName}}</a>
                         </vr-columns>
                     </vr-row>
                     <vr-row removeline>
